# Jeprof

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENCE.md  Makefile  README.md  STRUCTURE.md
Je-Prof/: Instrumentor.h  timer.h
Sample/: sample.cpp
cmake/: JeprofConfig.cmake.in  pkg-config.pc.in
examples/: CmakeLists.txt  README.md
include/je-prof/: je-prof.h
src/: je-prof.cpp
tests/: CMakeLists.txt  README.md
